--- a/dingo_bringup/scripts/install
+++ b/dingo_bringup/scripts/install
@@ -1,8 +1,9 @@
+#!/usr/bin/env python
+
 import os
 import robot_upstart
 
 from catkin.find_in_workspaces import find_in_workspaces
-find_in_workspaces(project="dingo_bringup", path="can-udp-bridge.conf")
 
 main_job = robot_upstart.Job(workspace_setup=os.environ['ROBOT_SETUP'])
 main_job.add(package="dingo_base", filename="launch/base.launch")
