--- a/dingo_bringup/scripts/install
+++ b/dingo_bringup/scripts/install
@@ -3,6 +3,7 @@
 import os
 import robot_upstart
 
+from subprocess import call
 from catkin.find_in_workspaces import find_in_workspaces
 
 main_job = robot_upstart.Job(workspace_setup=os.environ['ROBOT_SETUP'])
@@ -16,7 +17,8 @@ os.system("sudo  sed -i '/After/c After=can-udp-bridge.service' /lib/systemd/sys
 
 class DingoExtras(robot_upstart.providers.Generic):
     def post_install(self):
-        pass
+        call('bash /home/administrator/dingo_ws/src/dingo_robot/dingo_bringup/scripts/set-wireless-interface', shell=True)
+        call('bash /home/administrator/dingo_ws/src/dingo_robot/dingo_bringup/scripts/set-dingo-config', shell=True)
 
     def generate_install(self):
         with open(find_in_workspaces(project="dingo_bringup", path="can-udp-bridge.conf")[0]) as f:
@@ -35,7 +37,6 @@ class DingoExtras(robot_upstart.providers.Generic):
             "/etc/systemd/system/multi-user.target.wants/can-udp-bridge.service": {
                 "symlink": "/lib/systemd/system/can-udp-bridge.service"
             }}
-
 
 other_job = robot_upstart.Job()
 other_job.install(Provider=DingoExtras)
